--- a/styles/global.css
+++ b/styles/global.css
@@ -22,6 +22,7 @@ box-sizing: border-box;
 }
 
 body{
+  font: var(--text);
   color: var(--text-color-secondary);
   background-color: var(--background-color);
 }
